--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -27,8 +27,8 @@
 
 </head>
 <body>
-<!-- ======= Header ======= -->
-<header id="header" class="header fixed-top d-flex align-items-center">
+  <!-- ======= Header ======= -->
+  <header id="header" class="header fixed-top d-flex align-items-center">
   <div class="container d-flex align-items-center justify-content-between">
 
     <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
@@ -49,10 +49,10 @@
     <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
   </div>
 </header>
-<!-- End Header -->
+  <!-- End Header -->
 
-<!-- ======= Hero Section ======= -->
-<section id="hero" class="hero d-flex align-items-center section-bg">
+  <!-- ======= Hero Section ======= -->
+  <section id="hero" class="hero d-flex align-items-center section-bg">
   <div class="container">
     <div class="row justify-content-between gy-5">
       <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start">
@@ -60,9 +60,6 @@
         <p data-aos="fade-up" data-aos-delay="100">Search & Compare the World's Leading <span style=" font-weight: 600;">Car Rental</span> Suppliers Today! No Credit Card Fees. We Speak Your Language. Unbeatable Prices. Destinations: Spain, France, Italy, UK, USA, Portugal, Greece, Australia, Ireland, Switzerland.</p>
         <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
           <a class="btn-Register-customer-new" href="#Register-customer-new">Register</a>
-<!--          <a href="https://vimeo.com/290450151"-->
-<!--             class="glightbox btn-watch-video d-flex align-items-center"><i-->
-<!--                  class="bi bi-play-circle"></i><span>Watch Video</span></a>-->
         </div>
       </div>
       <div class="col-lg-5 order-1 order-lg-2 text-center text-lg-start">
@@ -71,13 +68,13 @@
     </div>
   </div>
 </section>
-<!-- End Hero Section -->
+  <!-- End Hero Section -->
 
-<!-- ======= main ======= -->
-<main id="main">
+  <!-- ======= main ======= -->
+  <main id="main">
 
-  <!--======= About Section =======-->
-  <section class="about" id="about">
+    <!--======= About Section =======-->
+    <section class="about" id="about">
     <div class="container" data-aos="fade-up">
 
       <div class="section-header">
@@ -88,10 +85,6 @@
       <div class="row gy-4">
         <div class="col-lg-7 position-relative about-img"
              data-aos="fade-up" data-aos-delay="150" style="background-image: url(assets/img/about-1.jpg); ">
-<!--          <div class="call-us position-absolute">-->
-<!--&lt;!&ndash;            <h4>Have a Questions ?</h4>&ndash;&gt;-->
-<!--&lt;!&ndash;            <p>+94 41 420 7354</p>&ndash;&gt;-->
-<!--          </div>-->
         </div>
         <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
           <div class="content ps-0 ps-lg-5">
@@ -117,7 +110,6 @@
               </li>
             </ul>
             <p>
-
               If the vehicle is unharmed the Loss Damage Waiver will be returned in full to the customer.
               <br><span style="color: var(--color-primary-red)">(Engine faults and malfunctions in the car will not count when deductions are made
                             from the Loss Damage Waiver)</span>
@@ -133,10 +125,10 @@
 
     </div>
   </section>
-  <!--     End About Section-->
+    <!--     End About Section-->
 
-  <!-- ======= Register A Customer ======= -->
-  <section class="Register-customer-new" id="Register-customer-new">
+    <!-- ======= Register A Customer ======= -->
+    <section class="Register-customer-new" id="Register-customer-new">
     <div class="container" data-aos="fade-up">
 
       <div class="section-header">
@@ -246,10 +238,10 @@
 
     </div>
   </section>
-  <!-- End Register A Customer -->
+    <!-- End Register A Customer -->
 
-  <!-- ======= Contact Section ======= -->
-  <section class="contact" id="contact">
+    <!-- ======= Contact Section ======= -->
+    <section class="contact" id="contact">
     <div class="container" data-aos="fade-up">
 
       <div class="section-header">
@@ -336,99 +328,89 @@
       </div>
     </div>
   </section>
-  <!-- End Contact Section -->
+    <!-- End Contact Section -->
 
-</main>
-<!-- End #main -->
+  </main>
+    <!-- End #main -->
 
-<!-- ======= Footer ======= -->
-<footer class="footer " id="footer ">
-
-  <div class="container ">
-    <div class="row gy-3 ">
-      <div class="col-lg-3 col-md-6 d-flex ">
-        <i class="bi bi-geo-alt icon "></i>
-        <div>
-          <h4>Address</h4>
-          <p>
-            No. 25,Galle Road,<br> Matara.
-          </p>
+  <!-- ======= Footer ======= -->
+  <footer class="footer " id="footer ">
+    <div class="container ">
+      <div class="row gy-3 ">
+        <div class="col-lg-3 col-md-6 d-flex ">
+          <i class="bi bi-geo-alt icon "></i>
+          <div>
+            <h4>Address</h4>
+            <p> No. 25,Galle Road,<br> Matara.</p>
+          </div>
         </div>
-
-      </div>
-
-      <div class="col-lg-3 col-md-6 footer-links d-flex ">
-        <i class="bi bi-telephone icon "></i>
-        <div>
-          <h4>Reservations</h4>
-          <p>
-            <strong>Phone :</strong> +94 41 984 174<br>
-            <strong>Email :</strong> esay@gmail.com<br>
-          </p>
+        <div class="col-lg-3 col-md-6 footer-links d-flex ">
+          <i class="bi bi-telephone icon "></i>
+          <div>
+            <h4>Reservations</h4>
+            <p>
+              <strong>Phone :</strong> +94 41 984 174<br>
+              <strong>Email :</strong> esay@gmail.com<br>
+            </p>
+          </div>
         </div>
-      </div>
-
-      <div class="col-lg-3 col-md-6 footer-links d-flex ">
-        <i class="bi bi-clock icon "></i>
-        <div>
-          <h4>Opening Hours</h4>
-          <p><strong> Mon - Sat : 7.30AM-7.30PM </strong><br>Sunday : Closed</p>
+        <div class="col-lg-3 col-md-6 footer-links d-flex ">
+          <i class="bi bi-clock icon "></i>
+          <div>
+            <h4>Opening Hours</h4>
+            <p><strong> Mon - Sat : 7.30AM-7.30PM </strong><br>Sunday : Closed</p>
+          </div>
         </div>
-      </div>
-
-      <div class="col-lg-3 col-md-6 footer-links ">
-        <h4>Follow Us</h4>
-        <div class="social-links d-flex ">
-          <a class="twitter " href="# "><i class="bi bi-twitter "></i></a>
-          <a class="facebook " href="# "><i class="bi bi-facebook "></i></a>
-          <a class="instagram " href="# "><i class="bi bi-instagram "></i></a>
+        <div class="col-lg-3 col-md-6 footer-links ">
+          <h4>Follow Us</h4>
+          <div class="social-links d-flex ">
+            <a class="twitter " href="# "><i class="bi bi-twitter "></i></a>
+            <a class="facebook " href="# "><i class="bi bi-facebook "></i></a>
+            <a class="instagram " href="# "><i class="bi bi-instagram "></i></a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <ul class="nav justify-content-center mt-2 ">
-    <li class="nav-item ">
-      <a class="nav-link text " href="# ">Home</a>
-    </li>
-    <li class="nav-item ">
-      <a class="nav-link text " href="#about">About</a>
-    </li>
-    <li class="nav-item ">
-      <a class="nav-link text " href="#car">Car</a>
-    </li>
-    <li class="nav-item ">
-      <a class="nav-link text " href="#contact ">Contact</a>
-    </li>
-    <li class="nav-item ">
-      <a class="nav-link text " href="#Register-customer-new ">Register</a>
-    </li>
-  </ul>
+    <ul class="nav justify-content-center mt-2 ">
+      <li class="nav-item ">
+        <a class="nav-link text " href="# ">Home</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link text " href="#about">About</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link text " href="#car">Car</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link text " href="#contact ">Contact</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link text " href="#Register-customer-new ">Register</a>
+      </li>
+    </ul>
+    <div class="container ">
+      <div class="copyright ">&copy; Copyright <strong><span>Easy Rent</span></strong>. All Rights Reserved.</div>
+    </div>
+  </footer>
+  <!-- End Footer -->
 
-  <div class="container ">
-    <div class="copyright ">&copy; Copyright <strong><span>Easy Rent</span></strong>. All Rights Reserved.</div>
-  </div>
+  <a href="#" class="scroll-top d-flex align-items-center justify-content-center">
+    <i class="bi bi-arrow-up-short"></i>
+  </a>
+  <div id="preloader"></div>
 
-</footer>
-<!-- End Footer -->
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/jQuery/jquery-3.6.1.min.js"></script>
 
-<a href="#" class="scroll-top d-flex align-items-center justify-content-center">
-  <i class="bi bi-arrow-up-short"></i>
-</a>
-
-<div id="preloader"></div>
-
-<!-- Vendor JS Files -->
-<script src="assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
-<script src="assets/vendor/aos/aos.js"></script>
-<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-<script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-<script src="assets/vendor/php-email-form/validate.js"></script>
-<script src="assets/vendor/jQuery/jquery-3.6.1.min.js"></script>
-
-<!-- Template Main JS File -->
-<script src="assets/js/main.js"></script>
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
 
 </body>
 </html>
