--- a/Front_End/pages/driverDashboard.html
+++ b/Front_End/pages/driverDashboard.html
@@ -18,15 +18,27 @@
     <link href="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
 
 </head>
-    <body>
-        <!-- Vendor JS Files -->
-        <script src="../assets/vendor/apexcharts/apexcharts.min.js"></script>
-        <script src="../assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
-        <script src="../assets/vendor/jQuery/jquery-3.6.1.min.js "></script>
-        <script rel="script" src="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.js"></script>
+<body>
+    <!-- ======= Header ======= -->
+    <header id="header" class="header fixed-top d-flex align-items-center">
 
-        <!-- Util JS File -->
-        <script src="../util/alert.js" rel="script"></script>
-        <script src="../util/validation.js" rel="script"></script>
-    </body>
+        <div class="d-flex align-items-center justify-content-between">
+            <a id="driverDashboard1" class="logo d-flex align-items-center">
+                <span class="d-none d-lg-block">Easy <span>Rent.</span></span>
+            </a>
+            <i class="bi bi-list toggle-sidebar-btn"></i>
+        </div>
+        <!-- End Logo -->
+    </header>
+<!-- End Header -->
+    <!-- Vendor JS Files -->
+    <script src="../assets/vendor/apexcharts/apexcharts.min.js"></script>
+    <script src="../assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/vendor/jQuery/jquery-3.6.1.min.js "></script>
+    <script rel="script" src="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.js"></script>
+
+    <!-- Util JS File -->
+    <script src="../util/alert.js" rel="script"></script>
+    <script src="../util/validation.js" rel="script"></script>
+</body>
 </html>
