--- a/Front_End/pages/driverDashboard.html
+++ b/Front_End/pages/driverDashboard.html
@@ -102,9 +102,31 @@
 
     <!-- ======= Sidebar ======= -->
     <aside id="sidebar" class="sidebar">
+        <ul class="sidebar-nav" id="sidebar-nav">
+            <li class="nav-item">
+                <a class="nav-link" id="driverDashboardSection">
+                    <i class="bi bi-grid"></i>
+                    <span>Dashboard</span>
+                </a>
+            </li>
+            <!-- End Dashboard Nav -->
 
-        <ul class="sidebar-nav" id="sidebar-nav"></ul>
+            <li class="nav-item">
+                <a class="nav-link collapsed" id="myDetailsSection">
+                    <i class="bi bi-kanban"></i>
+                    <span>Profile Details</span>
+                </a>
+            </li>
+            <!-- End Details Nav -->
 
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="login.html">
+                    <i class="bi bi-box-arrow-in-right"></i>
+                    <span>LogOut</span>
+                </a>
+            </li>
+            <!-- End Login Page Nav -->
+        </ul>
     </aside>
     <!-- End Sidebar-->
 
