--- a/Front_End/pages/driverDashboard.html
+++ b/Front_End/pages/driverDashboard.html
@@ -144,6 +144,18 @@
                 </nav>
                 <div class="row mt-3">
                     <div class="card info-card">
+                        <!-- start card-body -->
+                        <div class="card-body mt-4">
+                            <!-- start row -->
+                            <div class="row">
+                                <!-- start col-->
+                                <div class="col-xl-12">
+                                </div>
+                                <!-- end col-->
+                            </div>
+                            <!-- end row -->
+                        </div>
+                        <!-- end card-body -->
                     </div>
                     <div class="card info-card">
                         <div class=" row col-12 mb-3 m-2 p-2 d-flex">
@@ -161,6 +173,24 @@
                 </nav>
                 <div class="row mt-3">
                     <div class="card info-card">
+                        <!-- start content-->
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-xl-12">
+                                            <div class="row">
+                                            </div>
+                                        </div>
+                                        <!-- end col-->
+                                    </div>
+                                    <!-- end row -->
+                                </div>
+                                <!-- end card-->
+                            </div>
+                            <!-- end col-->
+                        </div>
+                        <!-- end content-->
                     </div>
                 </div>
             </section>
