--- a/Front_End/pages/driverDashboard.html
+++ b/Front_End/pages/driverDashboard.html
@@ -152,13 +152,85 @@
                                 <div class="col-xl-12">
                                     <form id="customerDetailsForm" class="row">
                                         <section id="sec1CustomerDetails" class="col-xl-4">
-
+                                            <div class="mb-3">
+                                                <label class="form-label" for="cusUserID">User ID<span
+                                                        class="text-danger"></span></label>
+                                                <input class="form-control" readonly id="cusUserID" name="user_Id"
+                                                       placeholder="User ID" type="text">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label" for="userFirstName">First Name<span
+                                                        class="text-danger"></span></label>
+                                                <input class="form-control" readonly id="userFirstName" name="firstName"
+                                                       placeholder="First Name" type="text">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label" for="userLastName">Last Name<span
+                                                        class="text-danger"></span></label>
+                                                <input class="form-control" readonly id="userLastName" name="lastName"
+                                                       placeholder="Last Name" type="text">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label" for="customerContactNo">Contact
+                                                    Number<span
+                                                            class="text-danger"></span></label>
+                                                <input class="form-control" readonly id="customerContactNo"
+                                                       name="contact_No"
+                                                       placeholder="Contact No" type="text">
+                                            </div>
                                         </section>
                                         <section id="sec2CustomerDetails" class="col-xl-4">
-
+                                            <div class="mb-3">
+                                                <label class="form-label" for="customerAddress">Address<span
+                                                        class="text-danger"></span></label>
+                                                <input class="form-control" readonly id="customerAddress" name="address"
+                                                       placeholder="Address" type="text">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label" for="customerDriverEmail">Email<span
+                                                        class="text-danger"></span></label>
+                                                <input class="form-control" readonly id="customerDriverEmail" name="email"
+                                                       placeholder="Email" type="text">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label" for="customerNic">Nic No<span
+                                                        class="text-danger"></span></label>
+                                                <input class="form-control" readonly id="customerNic" name="nic"
+                                                       placeholder="Nic No" type="text">
+                                            </div>
                                         </section>
                                         <section id="sec3CustomerDetails" class="col-xl-4">
-
+                                            <div class="mb-3">
+                                                <label class="form-label" for="customerLicence">Licence No<span
+                                                        class="text-danger"></span></label>
+                                                <input class="form-control" readonly id="customerLicence" name="license_No"
+                                                       placeholder="Licence No" type="text">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="customerUserName" class="form-label">User Name<span
+                                                        class="text-danger"></span></label>
+                                                <div class="input-group has-validation">
+                                                        <span class="input-group-text"
+                                                              id="customerInputGroupPrepend">@</span>
+                                                    <input type="text" class="form-control" readonly id="customerUserName"
+                                                           name="user_Name" placeholder="User Name"
+                                                           aria-describedby="customerInputGroupPrepend" required>
+                                                    <div class="invalid-feedback">
+                                                        Please choose a username.
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="customerPassword" class="form-label">Password<span
+                                                        class="text-danger"></span></label>
+                                                <div class="input-group input-group-merge">
+                                                    <input type="password" id="customerPassword" readonly name="password"
+                                                           class="form-control" placeholder="Password">
+                                                    <div class="input-group-text" data-password="false">
+                                                        <span class="bi bi-eye-slash"></span>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </section>
                                     </form>
                                 </div>
