--- a/Front_End/pages/driverDashboard.html
+++ b/Front_End/pages/driverDashboard.html
@@ -267,7 +267,20 @@
                                                      style="height: 400px; background: white;">
                                                     <div class="table-responsive customerTableDiv overflow-auto "
                                                          style="height: 420px;">
-
+                                                        <table class="text-nowrap table table-light table-striped table-bordered table-hover">
+                                                            <thead class="text-dark table-danger text-center  table-bordered">
+                                                            <tr>
+                                                                <th scope="col">Rent ID</th>
+                                                                <th scope="col">Car ID</th>
+                                                                <th scope="col">Pick-Up Date</th>
+                                                                <th scope="col">Pick-Up Time</th>
+                                                                <th scope="col">Return Date</th>
+                                                                <th scope="col">Return Time</th>
+                                                                <th scope="col">Location</th>
+                                                            </tr>
+                                                            </thead>
+                                                            <tbody id="driverSheduleTable"></tbody>
+                                                        </table>
                                                     </div>
                                                 </div>
                                             </div>
