--- a/Front_End/pages/driverDashboard.html
+++ b/Front_End/pages/driverDashboard.html
@@ -17,6 +17,9 @@
     <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
 
+    <!-- Template Dashboard CSS File -->
+    <link href="../assets/css/dashboardStyle.css" rel="stylesheet">
+
 </head>
 <body>
     <!-- ======= Header ======= -->
