--- a/Front_End/pages/driverDashboard.html
+++ b/Front_End/pages/driverDashboard.html
@@ -313,17 +313,36 @@
     </footer>
     <!-- End Footer -->
 
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+            class="bi bi-arrow-up-short"></i></a>
+
     <!-- Vendor JS Files -->
     <script src="../assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="../assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/vendor/jQuery/jquery-3.6.1.min.js "></script>
     <script rel="script" src="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.js"></script>
 
-    <!-- Controller JS File -->
     <script src="../controller/driverDashboardController.js"></script>
-
     <!-- Util JS File -->
     <script src="../util/alert.js" rel="script"></script>
     <script src="../util/validation.js" rel="script"></script>
+
+    <script>
+        $(document).ready(function () {
+            $("#profileDetails").css('display', 'none');
+            $("#driverShedule").css('display', 'block');
+        });
+
+        $("#driverDashboardSection").click(function () {
+            $("#profileDetails").css('display', 'none');
+            $("#driverShedule").css('display', 'block');
+        });
+
+        $("#myDetailsSection,#Mypro,#Mypro1").click(function () {
+            $("#profileDetails").css('display', 'block');
+            $("#driverShedule").css('display', 'none');
+        });
+
+    </script>
 </body>
 </html>
