--- a/Front_End/pages/driverDashboard.html
+++ b/Front_End/pages/driverDashboard.html
@@ -322,6 +322,10 @@
     <script src="../assets/vendor/jQuery/jquery-3.6.1.min.js "></script>
     <script rel="script" src="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.js"></script>
 
+    <!-- Template Dashboard Main JS File -->
+    <script src="../assets/js/dashboardMain.js"></script>
+
+    <!-- Controller JS File -->
     <script src="../controller/driverDashboardController.js"></script>
     <!-- Util JS File -->
     <script src="../util/alert.js" rel="script"></script>
