--- a/Front_End/pages/driverDashboard.html
+++ b/Front_End/pages/driverDashboard.html
@@ -266,7 +266,7 @@
                                     <div class="row">
                                         <div class="col-xl-12">
                                             <div class="row">
-                                                <div class="table-responsive-xxl flex-grow-0 gap-3 col-xl-8 mt-4 sectionBorder"
+                                                <div class="table-responsive-xxl flex-grow-0 gap-3 col-xl-11 mt-4 sectionBorder"
                                                      style="height: 400px; background: white;">
                                                     <div class="table-responsive customerTableDiv overflow-auto "
                                                          style="height: 420px;">
@@ -326,6 +326,7 @@
     <script src="../assets/js/dashboardMain.js"></script>
 
     <!-- Controller JS File -->
+    <script src="../controller/DashBoardController.js"></script>
     <script src="../controller/driverDashboardController.js"></script>
     <!-- Util JS File -->
     <script src="../util/alert.js" rel="script"></script>
