--- a/Front_End/pages/login.html
+++ b/Front_End/pages/login.html
@@ -91,6 +91,8 @@
     <!-- Core plugin JavaScript-->
     <script src="../assets/vendor/jquery-easing/jquery.easing.min.js"></script>
 
+    <!-- Controller JS File -->
+    <script src="../controller/LoginForm.js"></script>
 
 </body>
 
