--- a/Front_End/pages/adminDashboard.html
+++ b/Front_End/pages/adminDashboard.html
@@ -313,6 +313,28 @@
                 </ul>
             </li>
             <!-- End View Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="adminPages/CusomerRequest.html" id="myDetailsSection">
+                    <i class="bi bi-kanban"></i>
+                    <span>Rent Request</span>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="adminPages/IncomeDetails.html" id="incomeDetails">
+                    <i class="bi bi-kanban"></i>
+                    <span>Income Details</span>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="login.html">
+                    <i class="bi bi-box-arrow-in-right"></i>
+                    <span>LogOut</span>
+                </a>
+            </li>
+            <!-- End Login Page Nav -->
         </ul>
     </aside>
     <!-- End Sidebar-->
