--- a/Front_End/pages/adminDashboard.html
+++ b/Front_End/pages/adminDashboard.html
@@ -339,6 +339,23 @@
     </aside>
     <!-- End Sidebar-->
 
+    <!-- ======= Main ======= -->
+    <main id="main" class="main">
+
+        <div class="pageTitle" id="pageOne">
+            <h1>Admin Dashboard</h1>
+            <nav>
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="adminDashboard.html">Home</a></li>
+                    <li class="breadcrumb-item active">Dashboard</li>
+                </ol>
+            </nav>
+        </div>
+        <!-- End Page Title -->
+
+    </main>
+    <!-- End #main -->
+
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
         class="bi bi-arrow-up-short"></i></a>
 
