--- a/Front_End/pages/adminDashboard.html
+++ b/Front_End/pages/adminDashboard.html
@@ -353,6 +353,20 @@
         </div>
         <!-- End Page Title -->
 
+        <section class="section dashboard">
+            <div class="row">
+
+                <!-- Left side columns -->
+                <div class="col-lg-8">
+                </div>
+                <!-- End Left side columns -->
+
+                <!-- Right side columns -->
+                <div class="col-lg-4">
+                </div>
+                <!-- End Right side columns -->
+            </div>
+        </section>
     </main>
     <!-- End #main -->
 
