--- a/Front_End/pages/adminDashboard.html
+++ b/Front_End/pages/adminDashboard.html
@@ -377,6 +377,43 @@
                             </div>
                         </div>
                         <!-- End Car Card -->
+
+                        <!-- Available Car Card -->
+                        <div class="col-xxl-4 col-md-6">
+                            <div class="card info-card car-card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Available Cars <span>| Today</span></h5>
+                                    <div class="d-flex align-items-center">
+                                        <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                            <i class="bi bi-car-front-fill"></i>
+                                        </div>
+                                        <div class="ps-3">
+                                            <h6 id="availableCarCount">0</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Car Card -->
+
+                        <!-- Reserved Car Card -->
+                        <div class="col-xxl-4 col-md-6">
+                            <div class="card info-card car-card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Reserved Cars <span>| Today</span></h5>
+                                    <div class="d-flex align-items-center">
+                                        <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                            <i class="bi bi-car-front-fill"></i>
+                                        </div>
+                                        <div class="ps-3">
+                                            <h6 id="reservedCarCount">0</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Car Card -->
+
                     </div>
                 </div>
                 <!-- End Left side columns -->
