--- a/Front_End/pages/adminDashboard.html
+++ b/Front_End/pages/adminDashboard.html
@@ -473,6 +473,26 @@
                         </div>
                         <!-- End Drivers Card -->
 
+                        <!-- Customers Card -->
+                        <div class="col-xxl-4 col-xl-6">
+                            <div class="card info-card customers-card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Customers <span>| All Type</span></h5>
+
+                                    <div class="d-flex align-items-center">
+                                        <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                            <i class="bi bi-people"></i>
+                                        </div>
+                                        <div class="ps-3">
+                                            <h6 id="customerCount">0</h6>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Customers Card -->
+
                     </div>
                 </div>
                 <!-- End Left side columns -->
