--- a/Front_End/pages/adminDashboard.html
+++ b/Front_End/pages/adminDashboard.html
@@ -606,6 +606,11 @@
                         </div>
 
                         <div class="card-body">
+                            <h5 class="card-title">Recent Activity <span>| Today</span></h5>
+
+                            <div class="activity">
+                            </div>
+
                         </div>
                     </div>
                     <!-- End Recent Activity -->
